# langchain_learnings_mindx

./: .env  agents_lc.py  app.py  fc.py  fc_so.py  pyproject.toml  sales_tools.py  structuredoutput.py
langchain_learnings_mindx.git/: config  packed-refs
langchain_learnings_mindx.git/objects/pack/: pack-23b62bdf8fba8328f056f119755c3eac25f531da.idx  pack-23b62bdf8fba8328f056f119755c3eac25f531da.pack
so_proj/: so_proj1.py
