[tool.poetry]
name = "function_calling"
version = "0.1.0"
description = "Function calling with langchain"
authors = ["Aqsa Shoeb"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.18"
langchain-community = "^0.3.17"
openai = "^1.61.1"
streamlit = "^1.42.0"
langchain-openai = "^0.3.5"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
Jinja2 = "^3.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
